Replace `Collections.singletonList`/`emptyList` with `List.of`