@@ -2,12 +2,11 @@ package com.github.lapesd.hdtss.model.nodes;
 
 import org.checkerframework.checker.nullness.qual.NonNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Project extends AbstractOp {
     public Project(@NonNull List<String> varNames, @NonNull Op inner) {
-        super(Collections.singletonList(inner));
+        super(List.of(inner));
         this.varNames = varNames;
     }
 
